minor spacing fix 2

--- a/src/style.scss
+++ b/src/style.scss
@@ -130,6 +130,7 @@ button:hover {
     max-width: 80%;
     justify-self: center;
     text-align: center;
+    margin-bottom: 50px;
     &__error-message {
       opacity: 0;
       transition: opacity 1s linear;
@@ -140,6 +141,5 @@ button:hover {
     flex-direction: column;
     justify-self: center;
     text-align: center;
-    margin-bottom: 20px;
   }
 }
